src/chrome/komodo/skin/plat/shared/window.less
/* ... */
/* Statusbar */

statusbar
{
    -moz-appearance: @statusbar-appearance !important;
    padding: 0 !important;
    font-family: @statusbar-font;
    font-size: @statusbar-font-size;
    color: @statusbar-text-color;
    border: 0 !important;

    & > statusbarpanel
    {
        -moz-appearance: none;
        padding: 2px;
        background: @statusbar-background;
        .border(@statusbar-border-width, @statusbar-border-style, @statusbar-border-color);
        -moz-border-image: @statusbar-panel-border-image;

        &:last-child, &#statusbar-line-col
        {
            border-right: 0;
        }
    }
}

/* Tree Elements */

.list-styling()
{
    ._self(@name)
    {
        -moz-appearance: ~"@{list-@{name}-appearance}" !important;
        background: ~"@{list-@{name}-background}" !important;
        border: ~"@{list-@{name}-border}";
    }

    ._header-styling(@name)
    {
        -moz-appearance: ~"@{list-@{name}-header-appearance}";
        background: ~"@{list-@{name}-header-background}" !important;
        padding: 2px;
        color: ~"@{list-@{name}-header-color}";
        border: 0;
        border-width: ~"@{list-@{name}-header-border-width}";
        border-style: ~"@{list-@{name}-header-border-style}";
        border-color: ~"@{list-@{name}-header-border-color}";
    }

    ._list-item-styling(@name)
    {
        color: ~"@{list-@{name}-item-color}";
        background: ~"@{list-@{name}-row-background}";
        border: 0;

        &[selected="true"]
        {
            color: ~"@{list-@{name}-item-color-selected}";
            background: ~"@{list-@{name}-row-background-selected}";
        }

        &[selected="true"]:focus
        {
            color: ~"@{list-@{name}-item-color-focus}";
            background: ~"@{list-@{name}-row-background-focus}";
        }
    }

    ._tree-item-styling(@name)
    {
        color: ~"@{list-@{name}-item-color}";

        &(selected)
        {
            color: ~"@{list-@{name}-item-color-selected}" !important;
        }

        &(selected, focus)
        {
            color: ~"@{list-@{name}-item-color-focus}" !important;
        }
    }

    ._tree-item-wrap-styling(@name)
    {
        background: ~"@{list-@{name}-row-background}";
        border: 0;

        &(multicol, odd)
        {
            background: ~"@{list-@{name}-row-background-odd}";
        }


        &(selected)
        {
            background: ~"@{list-@{name}-row-background-selected}";
        }

        &(selected, focus)
        {
            background: ~"@{list-@{name}-row-background-focus}";
        }
    }

    .tree(@name)
    {
        .list-styling._self(@name);

        treecol:not([hideheader]), treecolpicker { .list-styling._header-styling(@name) }
        treechildren::-moz-tree-cell-text { .list-styling._tree-item-styling(@name); }
        treechildren::-moz-tree-row { .list-styling._tree-item-wrap-styling(@name); }
    }

    .listbox(@name)
    {
        .list-styling._self(@name);

        listheader { .list-styling._header-styling(@name); }
        listitem { .list-styling._list-item-styling(@name); }
    }

    .richlistbox(@name)
    {
        .list-styling._self(@name);

        listheader { .list-styling._header-styling(@name); }
        richlistitem, notification { .list-styling._list-item-styling(@name); }
    }

}

tree { .list-styling.tree(tree); }
listbox { .list-styling.listbox(listbox); }
richlistbox { .list-styling.richlistbox(listbox); }

/* Unified Menu */

#unifiedMenuPrimaryPane, #unifiedMenuSecondaryPane
{
    min-width: 200px;
}

#unifiedMenuPrimaryPane
{
    border-right: @panel-border;
}

/* Groupboxes */

groupbox
{
    -moz-appearance: @groupbox-appearance;
    border: @groupbox-border;
    
    caption
    {
        font-weight: @groupbox-caption-font-weight;
        background: @groupbox-caption-background;
    }
}

/* Tooltips */
tooltip
{
    -moz-appearance: @tooltip-appearance;
    background: @tooltip-background;
    border: @tooltip-border;

    description
    {
        color: @tooltip-color;
    }
}

/* Wizards */

wizard
{

    wizardpage,
    .wizard-header
    {
        background: @window-background;
        border-bottom: @wizard-header-border;
        color: @window-color;
    }

    .wizard-buttons
    {
        background: @bottom-background;
        border-top: @wizard-buttons-border;
    }

}

/* Alerts */

.alertBox
{
    background: @alertbox-background !important;
    border: @alertbox-border !important;
}

.alertImageBox
{
    background: @alertbox-image-background !important;
    border: @alertbox-image-border !important;
}

.alertTextBox, .alertCloseBox
{
    background: @alertbox-text-background !important;
}

